--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,23 @@
-.App {
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap');
+
+body {
+  font-family: 'Poppins', sans-serif;
+  margin:0;
+  padding: 0;
+  background-color: white;
+}
+/* .app-container{
+ 
+    background-color: white;
+  } */
+
+  
+
+ 
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +54,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+
+
+
